# hintsvm

./: Makefile  Makefile.am  README.md  configure.ac  svm-train.c  svm.cpp  svm.h
python/: README.md  hintsvm.py  hintsvmutil.py  svm.py  svmutil.py
